JumpScript/tests/baselines/reference/parserClassDeclaration7.errors.txt
tests/cases/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration7.jump(2,3): error TS1038: A 'declare' modifier cannot be used in an already ambient context.


==== tests/cases/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration7.jump (1 errors) ====
    declare module M {
      declare class C {
      ~~~~~~~
!!! error TS1038: A 'declare' modifier cannot be used in an already ambient context.
      }
    }